syntax = "proto3";

package product;

option go_package = "github.com/alimikegami/pos-microservices/product-command-service/pb";

import "google/protobuf/empty.proto";

service ProductCommandService {
  rpc UpdateProductQuantityBatch(UpdateProductQuantityRequest) returns (google.protobuf.Empty);
}

service ProductQueryService {
  rpc GetProductPrice(GetProductPriceRequest) returns (ProductPriceResponse);
}

message Product {
  string product_id = 1;
  int64 quantity = 2;
  string name = 3;
  float price = 4;
  string description = 5;
}

message ProductQuantityUpdate {
  string product_id = 1;
  int64 quantity = 2;
}

message UpdateProductQuantityRequest {
  repeated ProductQuantityUpdate products = 1;
}

message GetProductPriceRequest {
  repeated string product_ids = 1;
}

message ProductPriceResponse {
  repeated Product products = 1;
}